--- a/3DMath/3DMath/3DMath/3DMath.vcxproj
+++ b/3DMath/3DMath/3DMath/3DMath.vcxproj
@@ -124,8 +124,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Matrix3x3.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="main.h" />
+    <ClInclude Include="MathUtil.h" />
+    <ClInclude Include="Matrix3x3.h" />
     <ClInclude Include="Vector3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
