--- a/3DMath/3DMath/3DMath/3DMath.vcxproj.filters
+++ b/3DMath/3DMath/3DMath/3DMath.vcxproj.filters
@@ -18,7 +18,10 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Matrix3x3.cpp">
+    <ClCompile Include="Matrix4x3.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="RotationMatrix.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,10 +32,16 @@
     <ClInclude Include="main.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="Matrix3x3.h">
+    <ClInclude Include="MathUtil.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="MathUtil.h">
+    <ClInclude Include="Matrix4x3.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Rotate.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="RotationMatrix.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
