--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,5 @@ EditorAndLua/Temp/
 EditorAndLua/Library/
 GameFramework/GameFrameworkPjt/Temp/
 GameFramework/GameFrameworkPjt/Library/
+Healthy Screen/Library/
+Healthy Screen/Temp/
